@@ -23,6 +23,7 @@ o minor cleanups
 = conntrackd =
 o fix asymmetric path support (reported by Gary Richards)
 o improve netlink overrun handling
+o add more verbose error notification when we fail to inject a conntrack
 
 version 0.9.6 (2008/03/08)
 ------------------------------
